<resources>
    <string name="app_name">PantauJuma</string>

    <!--BOTTOM MENU NAVIGATION-->
    <string name="title_home">Beranda</string>
    <string name="title_juma">Juma</string>
    <string name="title_komoditas">Komoditas</string>
    <string name="title_post">Post</string>
    <string name="title_profil">Profil</string>

    <!--HomePetani-->
    <string name="rdklong">Rencana Definitif Kelompok</string>
    <string name="rdkklong">Rencana Definitif Kebutuhan Kelompok</string>
    <string name="rktplong">Rencana Kerja Tahunan Penyuluh Pertanian</string>
    <string name="alsintan">Alsintan</string>
    <string name="harga">Harga</string>
    <string name="survei">Survei</string>
    <string name="lahan">Lahan</string>
    <string name="biodataPenduduk">Penduduk</string>
    <string name="targetPetugas">Target</string>

    <!--Progress dialog-->
    <string name="judul_pd">Silahkan Menunggu....</string>
    <string name="pd_judul_registrasi">Registrasi....</string>

    <string name="content_logout">Apakah anda yakin ingin keluar?</string>
    <string name="title_logout">Logout</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>

    <!--CRU Action-->
    <string name="simpan">Simpan Data</string>
    <string name="edit">Edit Data</string>
    <string name="delete">Hapus Data</string>
    <string name="update">Update Data</string>

    <!--RDK-->
    <string name="rdk">RDK</string>

    <!--RDKK-->
    <string name="rdkk">RDKK</string>
    <string name="petani">Petani</string>
    <string name="namaPetani">Nama Petani</string>
    <string name="butuhJanuari">Kebutuhan Bulan Januari</string>
    <string name="butuhFebruari">Kebutuhan Bulan Februari</string>
    <string name="butuhMaret">Kebutuhan Bulan Maret</string>
    <string name="butuhApril">Kebutuhan Bulan April</string>
    <string name="butuhMei">Kebutuhan Bulan Mei</string>
    <string name="butuhJuni">Kebutuhan Bulan Juni</string>
    <string name="butuhJuli">Kebutuhan Bulan Juli</string>
    <string name="butuhAgustus">Kebutuhan Bulan Agustus</string>
    <string name="butuhSeptember">Kebutuhan Bulan September</string>
    <string name="butuhOktober">Kebutuhan Bulan Oktober</string>
    <string name="butuhNovember">Kebutuhan Bulan November</string>
    <string name="butuhDesember">Kebutuhan Bulan Desember</string>

    <!--RKTP-->
    <string name="rktp">RKTP</string>
    <string name="tambahDetailRKTP">Tambah Detail RKTP</string>
    <string name="tahun">Tahun</string>
    <string name="tujuan">Tujuan</string>
    <string name="masalah">Masalah</string>
    <string name="sasaran">Sasaran</string>
    <string name="materi">Materi</string>
    <string name="metode">Metode</string>
    <string name="volume">Volume</string>
    <string name="lokasi">Lokasi</string>
    <string name="waktu">Waktu</string>
    <string name="sumberBiaya">Sumber Biaya</string>
    <string name="penanggungJawab">Penanggung Jawab</string>
    <string name="pelaksana">Pelaksana</string>

    <!--BiodataPendudukuduk-->
    <string name="nik">NIK</string>
    <string name="namaDepan">Nama Depan</string>
    <string name="namaBelakang">Nama Belakang</string>
    <string name="jenisKelamin">Jenis Kelamin</string>
    <string name="tempatLahir">Tempat Lahir</string>
    <string name="tanggalLahir">Tanggal Lahir</string>
    <string name="agama">Agama</string>
    <string name="golonganDarah">Golongan Darah</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="alamat">Alamat</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="dusun">Dusun</string>
    <string name="desa">Desa</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="datiII">Kab./Kota.</string>
    <string name="provinsi">Provinsi</string>
    <string name="noHP">No. HP</string>
    <string name="telp">Telp.</string>
    <string name="status">Status</string>
    <string name="foto">Foto</string>
    <string name="email">Email</string>
    <string name="kodePos">Kode Pos</string>

    <string name="tabBiodata">Biodata</string>
    <string name="tabAlamat">Alamat</string>

    <!--Poktan-->
    <string name="poktan">Poktan</string>
    <string name="nama">Nama</string>
    <string name="tanggalDidirikan">Tanggal Didirikan</string>
    <string name="deskripsi">Deskripsi</string>

    <!--Anggota Poktan-->
    <string name="namaPoktan">Nama Poktan</string>
    <string name="tanggalMasuk">Tanggal Masuk</string>
    <string name="tanggalKeluar">Tanggal Keluar</string>

    <!--Pengurus Poktan-->
    <string name="jabatan">Jabatan</string>
    <string name="periode">Periode</string>

    <!--Lahan-->
    <string name="tabDetailLahan">Detail Lahan</string>
    <string name="namaLahan">Nama Lahan</string>
    <string name="posisiLintang">Posisi Lintang</string>
    <string name="posisiBujur">Posisi Bujur</string>
    <string name="luas">Luas</string>
    <string name="batasTimur">Batas Timur</string>
    <string name="batasBarat">Batas Barat</string>
    <string name="batasSelatan">Batas Selatan</string>
    <string name="batasUtara">Batas Utara</string>

    <!--Target Petugas-->
    <string name="tahunKerja">Tahun Kerja</string>
    <string name="komoditas">Komoditas</string>
    <string name="luasTanam">Luas Tanam</string>
    <string name="luasPanen">Luas Panen</string>
    <string name="sasaranProduksi">Sasaran Produksi</string>
    <string name="sasaranProduktifitas">Sasaran Produktifitas</string>
    <string name="keterangan">Keterangan</string>

    <!--CRU Kegiatan-->
    <string name="tanggalMulai">Tanggal Mulai</string>
    <string name="tanggalAkhir">Tanggal Berakhir</string>
    <string name="masaKegiatan">Masa Kegiatan</string>
    <string name="jumlah">Jumlah</string>
    <string name="sumber">Sumber</string>
    <string name="cara">Cara</string>
    <string name="hasil">Hasil</string>
    <string name="pupuk">Pupuk</string>
    <string name="jumlahPupuk">Jumlah Pupuk</string>

    <!--Login  -->
    <string name="namaLengkap">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="title_forgot_psw">Lupa Password?</string>
    <string name="error_email">Email tidak boleh kosong</string>
    <string name="error_not_verified">Email belum diverifikasi</string>
    <string name="change_password">Ubah Password</string>
    <string name="password_min">Password minimal 6 karakter</string>
    <string name="password_error_retype">Password dan konfirmasi password tidak sesuai</string>
    <string name="password_success_change">Password Berhasil diubah</string>
    <string name="pulsa_phonenumber">Phone Number</string>
    <!--Finish String Login-->

    <!--Registrasi-->
    <string name="error_nama_kosong">"Nama Tidak Boleh Kosong"</string>
    <string name="re_password">Ketik Ulang Password</string>
    <string name="error_email_kosong">"Email Tidak Boleh Kosong"</string>
    <string name="error_password_kosong">Password Tidak boleh Kosong</string>
    <string name="error_password_tidak_sesuai">Password dan Re type Password tidak cocok</string>
    <string name="btn_back"> Kembali</string>
    <string name="error_mail">Email sudah digunakan </string>
    <string name="success_registrasi">Silahkan cek email untuk melakukan verifikasi akun</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!--Reset Password-->
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="forgot_password_msg">Kami membutuhkan email yang anda gunakan ketika mendaftar untuk melakukan reset password</string>
    <string name="btn_reset_password">Reset Password</string>

    <string name="some_error">Some Error Occurred!</string>
    <string name="network_error">No Internet Connection!</string>


    <!--HAPUS JIKA DIPERLUKAN:: UNTUK CARDVIEW-->
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Tambah Ke Favorit</string>
    <string name="action_read_next">Baca Nanti</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <!--Slider-->
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>
    <string name="no_internet_connection">No Internet Connection</string>


    <string name="title_download">Download Data</string>
    <string name="content_download">Apakah anda yakin download file baru?</string>

    <string name="title_sync">Sinkronisasi Data</string>
    <string name="content_sync">Apakah anda yakin Sinkronisasi Data?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabIdentitas">Informasi Poktan</string>
    <string name="tabAnggota">Anggota Poktan</string>
    <string name="tabPengurus">Pengurus Poktan</string>
    <string name="irigasi">Irigasi</string>
    <string name="tabJadwalKegiatan">Jadwal Kegiatan</string>
    <string name="tabRencanaUmum">Rencana Umum</string>
    <string name="tabSaranaIntensifikasi">Sarana Intensifikasi</string>
    <string name="petugas">Petugas</string>
    <string name="intensifikasi">Intensifikasi</string>
    <string name="rencana">Rencana</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="paketteknologi">Paket Teknologi</string>
    <string name="polatanam">Pola Tanam</string>
    <string name="jadwaltanam">Jadwal Tanam</string>
    <string name="varietas">Varietas</string>
    <string name="sumberbenih">Sumber Benih</string>
    <string name="tabungananggota">Tabungan Anggota</string>
    <string name="iurananggota">Iuran Anggota</string>
    <string name="pemupukanmodal">Modal Pemupukan</string>
    <string name="target">Target</string>
    <string name="targethasilperha">Target Hasil Per Hektar</string>
    <string name="tanggal">Tanggal</string>
    <string name="luasSawah">Luas Sawah</string>
    <string name="namaIrigasi">Nama Irigasi</string>
    <string name="deskripsiIrigasi">Deskripsi Irigasi</string>
    <string name="tanggalKegiatan">Tanggal Kegiatan</string>
    <string name="deskripsiKegiatan">Deskripsi Kegiatan</string>
    <string name="paketTeknologi">Paket Teknologi</string>
    <string name="polaTanam">Pola Tanam</string>
    <string name="jadwalTanam">Jadwal Tanam</string>
    <string name="sumberBenih">Sumber Benih</string>
    <string name="tabunganAnggota">Tabungan Anggota</string>
    <string name="iuranAnggota">Iuran Anggota</string>
    <string name="modalPemupukan">Modal Pemupukan</string>
    <string name="targetHasil">Target Hasil Per Hektar</string>
    <string name="komoditasSI">Komoditas Sasaran Intensifikasi</string>
    <string name="komoditasPB">Komoditas Pupuk Bersubsidi</string>
    <string name="namaAlat">Nama Alat</string>
    <string name="pasar">Pasar</string>
    <string name="satuan">Satuan</string>
    <string name="anggota">Anggota</string>
    <string name="tambahAnggota">Tambah Anggota</string>
    <string name="pengurus">Pengurus</string>
    <string name="submit">Submit</string>
    <string name="judul">Judul</string>
    <string name="isi">Isi</string>
    <string name="tahun_kerja">Tahun Kerja</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_lahan">Map</string>
    <string name="topik">Topik</string>
    <string name="kirim">Kirim</string>
    <string name="title_activity_toko_maps">Map</string>
    <string name="stock">Stock</string>

</resources>
