<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_juma"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_juma" />

    <item
        android:id="@+id/navigation_komoditas"
        android:icon="@drawable/ic_local_florist_black_24dp"
        android:title="@string/title_komoditas" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_landscape_black_24dp"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profil" />
</menu>
